2010-11-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/Makefile.in, src/lisp/Makefile.in: More
	thorough cleaning.

2010-11-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/input/Makefile.in: Fix breakage due to r. 945.

2010-11-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-syscmd.boot: spadClosure?: Stricter
	check for Spad closures.

2010-11-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fspace.spad.pamphlet: Run not found case only
	when needed.

2010-11-08  Martin Rubey  <martin.rubey@math.uni-hannover.de>

	* contrib/emacs/Makefile.in: allow arguments to efricas

2010-11-03  Martin Baker <ax87438@martinb.com>

	Add new graphic framework.
	* src/algebra/scene.spad.pamphlet: New file
	src/algebra/Makefile.in, src/algebra/boo-cat.input,
	src/algebra/boo-dom1.input, src/algebra/boo-pack2.input:
	Adjust.

2010-11-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/combfunc.spad.pamphlet: Add special convertions
	to input form.

2010-11-02  Elias Pipping

	* Makefile.in: Separate install-contrib and install-src targets.

2010-10-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-toplev.boot: Try '.fricas.input' before
	'.axiom.input'.
	src/interp/int-top.boot, src/interp/util.lisp: Run
	init file after initializing algebra output.

2010-10-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/gaussian.spad.pamphlet: Fix branches for
	atan, asin and acos.

2010-10-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/util.lisp: Fix build with recent ECL.

2010-10-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* configure.ac, src/lib/gmp_wrap.c: Support GMP with sbcl
	for 32-bit machines.

2010-10-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/weier.spad.pamphlet: Fix and clean up.

2010-10-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/mts.spad.pamphlet: Give 0 for coefficients
	after end of stream.
