@@ -1,5 +1,10 @@
 2010-11-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/algebra/kl.spad.pamphlet, src/interp/i-syscmd.boot,
+	src/interp/primitives.lisp: Correct saving of kernels.
+
+2010-11-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/algebra/Makefile.in, src/lisp/Makefile.in: More
 	thorough cleaning.
 
